new font and improve dark theme

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <script src="landing.js" defer></script>
-    <script src='bulb_button.js' defer></script>
+    <script src='dark_theme.js' defer></script>
 </head>
 
 <body>
@@ -53,20 +53,21 @@
         <p class="introParagraph">
             Nice to see you here. Check out my website and get to know me more.
         </p>
-        <img src="/images/programing.png" alt="developer" title="Icons made by surang https://www.flaticon.com/authors/surang" class='developer-logo'>
         <button><a href="#about" class='mainBtn'>Learn more</a> </button>
-        <!--- <div class="mobile-logo"></div> -->
+        <img src="/images/programing.png" alt="developer" title="Icons made by surang https://www.flaticon.com/authors/surang" class='developer-logo'>
+
+
 
 
     </header>
     <main>
         <section id="about">
             <h2 class="aboutHeader leveling-skew">
-                About me <span class="exclamation-mark">!</span>
+                About me<span class="exclamation-mark">.</span>
             </h2>
             <p class="about-paragraph leveling-skew">
-                I am self taught guy who want to get a job as programmer and explore world of IT. Everyday I work to improve my skills and get to know new technologies and tools. I would like to develop in front-end branch. For now I know HTML, CSS, JavaScript and Vue.
-                It's hard to evaluate my level of knowledge myself. Besides web technologies I have knowledge about network administration and linux systems.
+                I am self taught guy who want to get a job as programmer and explore world of IT. Everyday I work to improve my skills and get to know new technologies and tools. I would like to develop in front-end branch. For now I know HTML, CSS, Sass, JavaScript
+                and Vue. It's hard to evaluate my level of knowledge myself. Besides web technologies I have knowledge about network administration and linux systems.
             </p>
             <div class="about-technologies leveling-skew">
                 <!--Icons made by surang https://www.flaticon.com/authors/surang -->
@@ -81,7 +82,7 @@
         <section id="portfolio">
 
             <h2 class="portfolioHeader">
-                Check out my projects <span class="exclamation-mark">!</span>
+                My works<span class="exclamation-mark">.</span>
             </h2>
 
             <div class="project_container">
@@ -93,10 +94,10 @@
 
                     <div class="project-links">
                         <button class="project-button">
-                <a href="https://quizzical-feynman-2bfe94.netlify.app">Live</a>
+                <a href="https://quizzical-feynman-2bfe94.netlify.app" class="project-link">Live</a>
               </button>
                         <button class="project-button">
-                <a href="https://github.com/dawmic/my-first-website-psd-to-html"
+                <a href="https://github.com/dawmic/my-first-website-psd-to-html" class="project-link"
                   >Code</a
                 >
               </button>
@@ -110,10 +111,10 @@
 
                     <div class="project-links">
                         <button class="project-button">
-                <a href="https://modest-ptolemy-aab939.netlify.app/">Live</a>
+                <a href="https://modest-ptolemy-aab939.netlify.app/" class="project-link">Live</a>
               </button>
                         <button class="project-button">
-                <a href="https://github.com/dawmic/Weather-App-JS">Code</a>
+                <a href="https://github.com/dawmic/Weather-App-JS" class="project-link">Code</a>
               </button>
                     </div>
                 </div>
@@ -124,10 +125,10 @@
                     </p>
                     <div class="project-links">
                         <button class="project-button">
-                <a href="https://stoic-almeida-823a9e.netlify.app/"> Live </a>
+                <a href="https://stoic-almeida-823a9e.netlify.app/" class="project-link"> Live </a>
               </button>
                         <button class="project-button">
-                <a href="https://github.com/dawmic/todo-list"> Code </a>
+                <a href="https://github.com/dawmic/todo-list" class="project-link"> Code </a>
               </button>
                     </div>
                 </div>
@@ -138,8 +139,8 @@
                     </p>
 
                     <div class="project-links">
-                        <button class="project-button">Live</button>
-                        <button class="project-button">Code</button>
+                        <button class="project-button"><a href="" class="project-link">Live</a></button>
+                        <button class="project-button"><a href="" class="project-link">Code</a></button>
                     </div>
                 </div>
             </div>
