style skills section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
 
         <img src="images/logoheader.svg" alt="logoHeader" class="logoHeaderImage" />
-        <h1><span class='nav-logo'>Hello, </span>I'm dawid. front end dev.</h1>
+        <h1><span class='nav-logo'>Hello, </span>I'm dawid. <br>front end dev.</h1>
         <p class="introParagraph">
             Nice to see you here. Check out my website and get to know me more.
         </p>
@@ -63,26 +63,39 @@
     <main>
         <section id="about">
             <h2 class="aboutHeader leveling-skew">
-                About me<span class="exclamation-mark">.</span>
-            </h2>
-            <p class="about-paragraph leveling-skew">
-                I am self taught guy who want to get a job as programmer and explore world of IT. Everyday I work to improve my skills and get to know new technologies and tools. I would like to develop in front-end branch. For now I know HTML, CSS, Sass, JavaScript
-                and Vue. It's hard to evaluate my level of knowledge myself. Besides web technologies I have knowledge about network administration and linux systems.
-            </p>
-            <div class="about-technologies leveling-skew">
+                About me</h2>
+
+
+            <div class="about-container leveling-skew">
+                <p class="about-paragraph ">
+                    I am self taught guy who want to get a job as front-end developer and explore world of IT. Since two years I learn HTML, CSS, JavaScript and try to improve my skills and get to know new technologies and tools. I would like to develop in web technologies.
+                    I've already know how works web. Two years ago I got CCNA certificate. HTTP protocol also is not alien for me. Naturally I can set up linux environment to work. Simultaneously I get to know cybersecurity issues.
+                </p>
+                <!--icon by <a target="_blank" href="https://icons8.com/icons/set/about-me-male">About me male icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+                <img src="/images/about_image.png" class="about-photo" loading="lazy" alt="about photo">
+
+            </div>
+
+
+        </section>
+        <section id="skills">
+            <h2 class="skillsHeader">Skills</h2>
+            <div class="skills_container">
                 <!--Icons made by surang https://www.flaticon.com/authors/surang -->
                 <img src="images/html5.png" alt="HTML5" title="HTML5" loading="lazy">
                 <img src="images/css3.png" alt="CSS3" title="CSS3" loading="lazy">
                 <img src="images/javascript.png" alt="JavaScript" title="JavaScript" loading="lazy">
                 <img src="images/vuejs.png" alt="VUE" title="VUE.js" loading="lazy">
                 <img src="images/sass.png" alt="SASS" title="SASS" loading="lazy">
+                <img src="images/git.png" alt="GIT" title="GIT" loading="lazy">
 
             </div>
+
         </section>
         <section id="portfolio">
 
             <h2 class="portfolioHeader">
-                My works<span class="exclamation-mark">.</span>
+                My works
             </h2>
 
             <div class="project_container">
