--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Author: Dawid M. Portfolio website." />
 
     <meta name="theme-color" content="#4285f4">
-    <title>DM front-end dev</title>
+    <title>DM front-end dev html css javascript vue</title>
 
     <link rel="icon" href="images/dm_nav_logo.png" sizes="16x16" />
 
@@ -33,6 +33,9 @@
             <ul class="menu">
                 <li>
                     <a href="#about" class="menuLink">ABOUT</a>
+                </li>
+                <li>
+                    <a href="#skills" class="menuLink">SKILLS</a>
                 </li>
                 <li>
                     <a href="#portfolio" class="menuLink">PORTFOLIO</a>
@@ -63,7 +66,7 @@
     <main>
         <section id="about">
             <h2 class="aboutHeader leveling-skew">
-                About me</h2>
+                about me</h2>
 
 
             <div class="about-container leveling-skew">
@@ -79,7 +82,7 @@
 
         </section>
         <section id="skills">
-            <h2 class="skillsHeader">Skills</h2>
+            <h2 class="skillsHeader">skills</h2>
             <div class="skills_container">
                 <!--Icons made by surang https://www.flaticon.com/authors/surang -->
                 <img src="images/html5.png" alt="HTML5" title="HTML5" loading="lazy">
@@ -95,7 +98,7 @@
         <section id="portfolio">
 
             <h2 class="portfolioHeader">
-                My works
+                my works
             </h2>
 
             <div class="project_container">
